arreglado problema menor con ordenar eventos